--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <ul>
             <li><a href="./Landing-Page/index.html">Landing Page</a></li>
+            <li><a href="./Etch-a-Sketch/index.html">Etch-a-Sketch</a></li>
         </ul>
     </body>
 </html>
