Checkbox for random colors

--- a/Etch-a-Sketch/index.html
+++ b/Etch-a-Sketch/index.html
@@ -14,6 +14,9 @@
             <input type="text" id="col-input" />
             <button id="render-btn">Render</button>
             <button id="clear-render">Clear</button>
+
+            <input type="checkbox" id="rnd-colors-toggle" />
+            <span class="gradient-text">Random Colors</span>
         </div>
 
         <div class="container"></div>
